<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <!-- Menu principal y botones -->
    <string name="app_name">My Little Hub</string>
    <string name="feedTitle">News</string>
    <string name="eqdfeedstitle">Equestria Daily</string>
    <string name="deviantART"></string>
    <string name="eqcfeedstitle">Equestria Chile</string>
    <string name="shortEQCShare">Eq. Chile</string>
    <string name="efrradiotitle">Everfree Radio</string>
    <string name="srbradiotitle">Sonic Radio Boom</string>
    <string name="eqcradiotitle">Equestria Chile Radio</string>
    <string name="epilisttitle">Episode Guide</string>
    <string name="settingstitle">Settings</string>
	<string name="main_textSubtTitle_text">Start</string>	
	<string name="main_btnEQD_text">Equestria Daily</string>
	<string name="main_btnEQC_text">Equestria Chile</string>
	<string name="main_btnNEWS_text">TEST</string>
	<string name="main_btnEpList_text">Episode Guide</string>
	<string name="feedOP">Feed</string>
	<string name="dir">Director: </string>
	<string name="writer">Writer: </string>
	<string name="webSite">Website</string>
	
	
   <!-- Direcciones de URL --> 
	<string name="urlBaseEQD">http://www.equestriadaily.com/</string>
	<string name="urlBaseEQC">http://equestriachile.blogspot.com/</string>
	<string name="urlBaseMLH">http://mlphub.ahumeniy.net/</string>
	<string name="urlRssEQD">http://feeds.feedburner.com/EquestriaDaily</string>
	<string name="urlRssEQC">http://equestriachile.blogspot.com/feeds/posts/default?alt=rss</string>
	<string name="urlRssMHL">http://mlphub.ahumeniy.net/syndication.axd</string>
	<string name="urlEpList">http://www.ahumeniy.net/whichmlpep/Data/episodelist.en.xml</string>
	<string name="urlThumbs">http://www.ahumeniy.net/whichmlpep/Data/Thumbs/</string>
	<string name="urlImages">http://www.ahumeniy.net/whichmlpep/Data/Pictures/</string>
	<string name="urlBaseNEWS">http://www.everfreeradio.com</string>
	<string name="urlRssNEWS">http://everfreeradio.com/?feed=atom</string>
	<string name="urlWEB">http://www.mylittlehub.net</string>
	
	<string name="urlFeeds">http://mlphub.ahumeniy.net/en/app/feeds.xml</string>
	
	<!-- Etiquetas y mensajes -->
	<string name="errordered">Failed to connect check network connection</string>
	<string name="loadWall">Loading Wallpapers</string>
	<string name="setWall">Saved</string>
	<string name="noSetWall">No changes</string>
	<string name="recargar">Re-Load</string>
	<string name="about">About</string>
	<string name="contact">feedback</string>
	<string name="options">Options</string>
	<string name="goURL">Go to Main Page</string>
	<string name="licence">Developed by Rodolfo Aravena for Equestria Chile and all fans of My Little Pony: Friendship is Magic</string>
	<string name="licence2">My Little Pony: Friendship is Magic and all its characters are owned by Hasbro. Inc.\n\nThis application is not licensed and has nothing to do with Hasbro. Inc.\n\nThis application can redirect, or display content generated by the community. The author is not responsible for the content</string>
	<string name="instruccion">Have impressions, questions, ideas to improve our application? Let us know!</string>
	<string name="subjectMail">[Feedback][MLPHUB][ANDROID]</string>
	<string name="aceptar">Ok</string>
	<string name="send">Send</string>
	<string name="listen">I am listening</string>
	
	<string name="btnrandom">Random</string>
	<string name="txtOp">Options</string>
	<string name="exit">Exit</string>
	<string name="ok">OK</string>
	<string name="all">All</string>
	<string name="season1">Season 1</string>
	<string name="season2">Season 2</string>
	<string name="season3">Season 3</string>
	
	<string name="atras">Back</string>
	<string name="wait">Updating&#8230;</string>
	<string name="conectandoEQD">Connecting to Equestria Daily&#8230;</string>
	<string name="conectandoEQC">Connecting to Equestria Chile&#8230;</string>
	<string name="conectandoRadio">Loading&#8230;</string>
	<string name="conectandoMLH">Connecting to My Little Hub&#8230;</string>
	<string name="conectando">Connecting to </string>
	<string name="conectandoSer">Getting list&#8230;</string>
	<string name="descargandofeed">Downloading feed n° </string>
	<string name="descargandoepil">Getting Episodes</string>
	<string name="descargando">Getting&#8230;</string>
	<string name="complete">Download complete</string>
	<string name="share">Share</string>
	<string name="errsong">The Radio is off</string>
	<string name="from">from</string>
	<string name="via">via</string>
	<string name="on">on</string>
    <string name="shortSeason">Season:</string>
    <string name="local_service_started">empezo servicio</string>
    <string name="local_service_label">label servicio</string>
    <string name="errorEFR">Can not get song&#8230;</string>
    <string name="errorConRadio">Failed to connect</string>
    <string name="errorSearch">Can not do search</string>
    <string name="MLH">News MLH</string>
    <string name="recibiendo">Retrieving title&#8230;</string>
    <string name="ingresa">To view the full article click the item</string>
    <string name="comparte">To share news hold the item</string>
    <string name="play">Playing</string>
    <string name="stop">Pause</string>
    <string name="background">Background App</string>
    <string name="save">Done</string>
    <string name="ts">Twilight\nSparkle</string>
    <string name="rd">Rainbow\nDash</string>
    <string name="pp">Pinkie Pie</string>
    <string name="rr">Rarity</string>    
    <string name="fs">Fluttershy</string>
    <string name="aj">Applejack</string>
    <string name="m6">Mane 6</string>
    <string name="vs">Vinyl\nScratch</string>
    <string name="ot">Octavia</string>
    <string name="random">Random</string>
    <string name="def">Default</string>
    <string name="backgroundRadio">Background Radio</string>
    <string name="reproduciendo">Playing</string>
    <string name="pausa">Pause</string>
    <string name="detenido">Stopped</string>
    <string name="manufacture">Manufacture: </string>
    <string name="modelo">Model: </string>
    
    <!-- Descripcion episodio -->
    
    
    <!-- Contador -->
    <string name="msgCountdown">To next episode: </string>
    <string name="day">Day(s)</string>
    <string name="hour">Hour(s)</string>
    <string name="min">Minute(s)</string>
    <string name="sec">Second(s)</string>
    <string name="l"> -- </string>
    </resources>