<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="5dp"
    android:paddingRight="5dp" >
    
   


    <TextView
        android:id="@+id/about"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about"
        android:layout_gravity="center"
		android:textSize="50sp"
		android:textColor="@android:color/white" />
    
    <ScrollView android:id="@+id/ScrlView" android:layout_width="fill_parent" android:layout_height="fill_parent" >

			<LinearLayout
			     android:layout_width="match_parent"
			     android:layout_height="wrap_content"
			     android:orientation="vertical" >
			    		
			    		 <TextView
							android:id="@+id/app_version"
							android:layout_width="match_parent"
							android:layout_height="wrap_content"
							android:textSize="13dp"
							android:textColor="@android:color/white" />
			
			
				    
					    <TextView
					        android:id="@+id/licence1"
					        android:layout_width="match_parent"
					        android:layout_height="wrap_content"
					        android:text="@string/licence"
					        android:textSize="15.5dp"
					        android:textColor="@android:color/white" />
					
					    <TextView
					        android:id="@+id/textView3"
					        android:layout_width="wrap_content"
					        android:layout_height="wrap_content"
					        android:textAppearance="?android:attr/textAppearanceSmall" />
					
					
					
					    <Button
					        android:id="@+id/dA"
					        android:layout_width="185dp"
					        android:layout_height="wrap_content"
					        android:layout_gravity="center"
					        android:text="@string/webSite"
					        android:onClick="btnWeb" />
					
					
					    <Button
					        android:id="@+id/EQC"
					        android:layout_width="185dp"
					        android:layout_height="wrap_content"
					        android:layout_gravity="center"
					        android:text="@string/eqcfeedstitle" 
					        android:onClick="btnEQC"/>
					    
					    <Button
					        android:id="@+id/contact"
					        android:layout_width="185dp"
					        android:layout_height="wrap_content"
					        android:layout_gravity="center"
					        android:text="@string/contact" 
					        android:onClick="btnCtUs"/>
					
					    <TextView
					        android:id="@+id/textView5"
					        android:layout_width="wrap_content"
					        android:layout_height="wrap_content"
					        android:textAppearance="?android:attr/textAppearanceSmall" />
					   <TextView
					        android:id="@+id/licence2"
					        android:layout_width="match_parent"
					        android:layout_height="wrap_content"
					        android:text="@string/licence2"
					        android:textSize="12sp" 
					        android:textColor="@android:color/white"/>
					

			   
			</LinearLayout>
		
	</ScrollView>	

</LinearLayout>